project('openssl', 'c', version: '3.0.0-alpha4')

libcrypto_sources = [
     'crypto/aes/aes_cbc.c',
     'crypto/aes/aes_cfb.c',
     'crypto/aes/aes_core.c',
     'crypto/aes/aes_ecb.c',
     'crypto/aes/aes_misc.c',
     'crypto/aes/aes_ofb.c',
     'crypto/aes/aes_wrap.c',
     'crypto/aria/aria.c',
     'crypto/asn1/a_bitstr.c',
     'crypto/asn1/a_d2i_fp.c',
     'crypto/asn1/a_digest.c',
     'crypto/asn1/a_dup.c',
     'crypto/asn1/a_gentm.c',
     'crypto/asn1/a_i2d_fp.c',
     'crypto/asn1/a_int.c',
     'crypto/asn1/a_mbstr.c',
     'crypto/asn1/a_object.c',
     'crypto/asn1/a_octet.c',
     'crypto/asn1/a_print.c',
     'crypto/asn1/a_sign.c',
     'crypto/asn1/a_strex.c',
     'crypto/asn1/a_strnid.c',
     'crypto/asn1/a_time.c',
     'crypto/asn1/a_type.c',
     'crypto/asn1/a_utctm.c',
     'crypto/asn1/a_utf8.c',
     'crypto/asn1/a_verify.c',
     'crypto/asn1/ameth_lib.c',
     'crypto/asn1/asn1_err.c',
     'crypto/asn1/asn1_gen.c',
     'crypto/asn1/asn1_item_list.c',
     'crypto/asn1/asn1_lib.c',
     'crypto/asn1/asn1_par.c',
     'crypto/asn1/asn_mime.c',
     'crypto/asn1/asn_moid.c',
     'crypto/asn1/asn_mstbl.c',
     'crypto/asn1/asn_pack.c',
     'crypto/asn1/bio_asn1.c',
     'crypto/asn1/bio_ndef.c',
     'crypto/asn1/d2i_param.c',
     'crypto/asn1/d2i_pr.c',
     'crypto/asn1/d2i_pu.c',
     'crypto/asn1/evp_asn1.c',
     'crypto/asn1/f_int.c',
     'crypto/asn1/f_string.c',
     'crypto/asn1/i2d_param.c',
     'crypto/asn1/i2d_pr.c',
     'crypto/asn1/i2d_pu.c',
     'crypto/asn1/nsseq.c',
     'crypto/asn1/p5_pbe.c',
     'crypto/asn1/p5_pbev2.c',
     'crypto/asn1/p5_scrypt.c',
     'crypto/asn1/p8_pkey.c',
     'crypto/asn1/t_bitst.c',
     'crypto/asn1/t_pkey.c',
     'crypto/asn1/t_spki.c',
     'crypto/asn1/tasn_dec.c',
     'crypto/asn1/tasn_enc.c',
     'crypto/asn1/tasn_fre.c',
     'crypto/asn1/tasn_new.c',
     'crypto/asn1/tasn_prn.c',
     'crypto/asn1/tasn_scn.c',
     'crypto/asn1/tasn_typ.c',
     'crypto/asn1/tasn_utl.c',
     'crypto/asn1/x_algor.c',
     'crypto/asn1/x_bignum.c',
     'crypto/asn1/x_info.c',
     'crypto/asn1/x_int64.c',
     'crypto/asn1/x_pkey.c',
     'crypto/asn1/x_sig.c',
     'crypto/asn1/x_spki.c',
     'crypto/asn1/x_val.c',
     'crypto/async/arch/async_null.c',
     'crypto/async/arch/async_posix.c',
     'crypto/async/arch/async_win.c',
     'crypto/async/async.c',
     'crypto/async/async_err.c',
     'crypto/async/async_wait.c',
     'crypto/bf/bf_cfb64.c',
     'crypto/bf/bf_ecb.c',
     'crypto/bf/bf_enc.c',
     'crypto/bf/bf_ofb64.c',
     'crypto/bf/bf_skey.c',
     'crypto/bio/b_addr.c',
     'crypto/bio/b_dump.c',
     'crypto/bio/b_print.c',
     'crypto/bio/b_sock.c',
     'crypto/bio/b_sock2.c',
     'crypto/bio/bf_buff.c',
     'crypto/bio/bf_lbuf.c',
     'crypto/bio/bf_nbio.c',
     'crypto/bio/bf_null.c',
     'crypto/bio/bf_prefix.c',
     'crypto/bio/bio_cb.c',
     'crypto/bio/bio_err.c',
     'crypto/bio/bio_lib.c',
     'crypto/bio/bio_meth.c',
     'crypto/bio/bss_acpt.c',
     'crypto/bio/bss_bio.c',
     'crypto/bio/bss_conn.c',
     'crypto/bio/bss_dgram.c',
     'crypto/bio/bss_fd.c',
     'crypto/bio/bss_log.c',
     'crypto/bio/bss_mem.c',
     'crypto/bio/bss_null.c',
     'crypto/bio/bss_sock.c',
     'crypto/bn/bn_add.c',
     'crypto/bn/bn_asm.c',
     'crypto/bn/bn_blind.c',
     'crypto/bn/bn_const.c',
     'crypto/bn/bn_conv.c',
     'crypto/bn/bn_ctx.c',
     'crypto/bn/bn_dh.c',
     'crypto/bn/bn_div.c',
     'crypto/bn/bn_err.c',
     'crypto/bn/bn_exp.c',
     'crypto/bn/bn_exp2.c',
     'crypto/bn/bn_gcd.c',
     'crypto/bn/bn_gf2m.c',
     'crypto/bn/bn_intern.c',
     'crypto/bn/bn_kron.c',
     'crypto/bn/bn_lib.c',
     'crypto/bn/bn_mod.c',
     'crypto/bn/bn_mont.c',
     'crypto/bn/bn_mpi.c',
     'crypto/bn/bn_mul.c',
     'crypto/bn/bn_nist.c',
     'crypto/bn/bn_prime.c',
     'crypto/bn/bn_print.c',
     'crypto/bn/bn_rand.c',
     'crypto/bn/bn_recp.c',
     'crypto/bn/bn_rsa_fips186_4.c',
     'crypto/bn/bn_shift.c',
     'crypto/bn/bn_sqr.c',
     'crypto/bn/bn_sqrt.c',
     'crypto/bn/bn_srp.c',
     'crypto/bn/bn_word.c',
     'crypto/bn/bn_x931p.c',
     'crypto/buffer/buf_err.c',
     'crypto/buffer/buffer.c',
     'crypto/chacha/chacha_enc.c',
     'crypto/cmac/cm_ameth.c',
     'crypto/cmac/cmac.c',
     'crypto/cmp/cmp_asn.c',
     'crypto/cmp/cmp_client.c',
     'crypto/cmp/cmp_ctx.c',
     'crypto/cmp/cmp_err.c',
     'crypto/cmp/cmp_hdr.c',
     'crypto/cmp/cmp_http.c',
     'crypto/cmp/cmp_msg.c',
     'crypto/cmp/cmp_protect.c',
     'crypto/cmp/cmp_server.c',
     'crypto/cmp/cmp_status.c',
     'crypto/cmp/cmp_util.c',
     'crypto/cmp/cmp_vfy.c',
     'crypto/cms/cms_asn1.c',
     'crypto/cms/cms_att.c',
     'crypto/cms/cms_cd.c',
     'crypto/cms/cms_dd.c',
     'crypto/cms/cms_enc.c',
     'crypto/cms/cms_env.c',
     'crypto/cms/cms_err.c',
     'crypto/cms/cms_ess.c',
     'crypto/cms/cms_io.c',
     'crypto/cms/cms_kari.c',
     'crypto/cms/cms_lib.c',
     'crypto/cms/cms_pwri.c',
     'crypto/cms/cms_sd.c',
     'crypto/cms/cms_smime.c',
     'crypto/conf/conf_api.c',
     'crypto/conf/conf_def.c',
     'crypto/conf/conf_err.c',
     'crypto/conf/conf_lib.c',
     'crypto/conf/conf_mall.c',
     'crypto/conf/conf_mod.c',
     'crypto/conf/conf_sap.c',
     'crypto/conf/conf_ssl.c',
     'crypto/crmf/crmf_asn.c',
     'crypto/crmf/crmf_err.c',
     'crypto/crmf/crmf_lib.c',
     'crypto/crmf/crmf_pbm.c',
     'crypto/ct/ct_b64.c',
     'crypto/ct/ct_err.c',
     'crypto/ct/ct_log.c',
     'crypto/ct/ct_oct.c',
     'crypto/ct/ct_policy.c',
     'crypto/ct/ct_prn.c',
     'crypto/ct/ct_sct.c',
     'crypto/ct/ct_sct_ctx.c',
     'crypto/ct/ct_vfy.c',
     'crypto/ct/ct_x509v3.c',
     'crypto/dh/dh_ameth.c',
     'crypto/dh/dh_asn1.c',
     'crypto/dh/dh_backend.c',
     'crypto/dh/dh_check.c',
     'crypto/dh/dh_err.c',
     'crypto/dh/dh_gen.c',
     'crypto/dh/dh_group_params.c',
     'crypto/dh/dh_kdf.c',
     'crypto/dh/dh_key.c',
     'crypto/dh/dh_lib.c',
     'crypto/dh/dh_meth.c',
     'crypto/dh/dh_pmeth.c',
     'crypto/dh/dh_prn.c',
     'crypto/dh/dh_rfc5114.c',
     'crypto/dso/dso_dl.c',
     'crypto/dso/dso_dlfcn.c',
     'crypto/dso/dso_err.c',
     'crypto/dso/dso_lib.c',
     'crypto/dso/dso_openssl.c',
     'crypto/dso/dso_vms.c',
     'crypto/dso/dso_win32.c',
     'crypto/ec/curve448/arch_32/f_impl.c',
     'crypto/ec/curve448/curve448.c',
     'crypto/ec/curve448/curve448_tables.c',
     'crypto/ec/curve448/eddsa.c',
     'crypto/ec/curve448/f_generic.c',
     'crypto/ec/curve448/scalar.c',
     'crypto/ec/curve25519.c',
     'crypto/ec/ec2_oct.c',
     'crypto/ec/ec2_smpl.c',
     'crypto/ec/ec_ameth.c',
     'crypto/ec/ec_asn1.c',
     'crypto/ec/ec_backend.c',
     'crypto/ec/ec_check.c',
     'crypto/ec/ec_ctrl.c',
     'crypto/ec/ec_curve.c',
     'crypto/ec/ec_cvt.c',
     'crypto/ec/ec_err.c',
     'crypto/ec/ec_key.c',
     'crypto/ec/ec_kmeth.c',
     'crypto/ec/ec_lib.c',
     'crypto/ec/ec_mult.c',
     'crypto/ec/ec_oct.c',
     'crypto/ec/ec_pmeth.c',
     'crypto/ec/ec_print.c',
     'crypto/ec/ecdh_kdf.c',
     'crypto/ec/ecdh_ossl.c',
     'crypto/ec/ecdsa_ossl.c',
     'crypto/ec/ecdsa_sign.c',
     'crypto/ec/ecdsa_vrf.c',
     'crypto/ec/eck_prn.c',
     'crypto/ec/ecp_mont.c',
     'crypto/ec/ecp_nist.c',
     'crypto/ec/ecp_oct.c',
     'crypto/ec/ecp_smpl.c',
     'crypto/ec/ecx_backend.c',
     'crypto/ec/ecx_key.c',
     'crypto/ec/ecx_meth.c',
     'crypto/err/err.c',
     'crypto/err/err_all.c',
     'crypto/err/err_blocks.c',
     'crypto/err/err_prn.c',
     'crypto/ess/ess_asn1.c',
     'crypto/ess/ess_err.c',
     'crypto/ess/ess_lib.c',
     'crypto/evp/bio_b64.c',
     'crypto/evp/bio_enc.c',
     'crypto/evp/bio_md.c',
     'crypto/evp/bio_ok.c',
     'crypto/evp/c_allc.c',
     'crypto/evp/c_alld.c',
     'crypto/evp/cmeth_lib.c',
     'crypto/evp/digest.c',
     'crypto/evp/e_aes.c',
     'crypto/evp/e_aes_cbc_hmac_sha1.c',
     'crypto/evp/e_aes_cbc_hmac_sha256.c',
     'crypto/evp/e_aria.c',
     'crypto/evp/e_bf.c',
     'crypto/evp/e_cast.c',
     'crypto/evp/e_chacha20_poly1305.c',
     'crypto/evp/e_des.c',
     'crypto/evp/e_des3.c',
     'crypto/evp/e_idea.c',
     'crypto/evp/e_null.c',
     'crypto/evp/e_rc2.c',
     'crypto/evp/e_rc4.c',
     'crypto/evp/e_rc4_hmac_md5.c',
     'crypto/evp/e_rc5.c',
     'crypto/evp/e_seed.c',
     'crypto/evp/e_sm4.c',
     'crypto/evp/e_xcbc_d.c',
     'crypto/evp/encode.c',
     'crypto/evp/evp_cnf.c',
     'crypto/evp/evp_enc.c',
     'crypto/evp/evp_err.c',
     'crypto/evp/evp_fetch.c',
     'crypto/evp/evp_key.c',
     'crypto/evp/evp_lib.c',
     'crypto/evp/evp_pbe.c',
     'crypto/evp/evp_pkey.c',
     'crypto/evp/evp_rand.c',
     'crypto/evp/evp_utils.c',
     'crypto/evp/exchange.c',
     'crypto/evp/kdf_lib.c',
     'crypto/evp/kdf_meth.c',
     'crypto/evp/keymgmt_lib.c',
     'crypto/evp/keymgmt_meth.c',
     'crypto/evp/legacy_blake2.c',
     'crypto/evp/legacy_md5.c',
     'crypto/evp/legacy_md5_sha1.c',
     'crypto/evp/legacy_ripemd.c',
     'crypto/evp/legacy_sha.c',
     'crypto/evp/legacy_wp.c',
     'crypto/evp/m_null.c',
     'crypto/evp/m_sigver.c',
     'crypto/evp/mac_lib.c',
     'crypto/evp/mac_meth.c',
     'crypto/evp/names.c',
     'crypto/evp/p5_crpt.c',
     'crypto/evp/p5_crpt2.c',
     'crypto/evp/p_lib.c',
     'crypto/evp/p_open.c',
     'crypto/evp/p_seal.c',
     'crypto/evp/p_sign.c',
     'crypto/evp/p_verify.c',
     'crypto/evp/pbe_scrypt.c',
     'crypto/evp/pkey_kdf.c',
     'crypto/evp/pkey_mac.c',
     'crypto/evp/pmeth_check.c',
     'crypto/evp/pmeth_fn.c',
     'crypto/evp/pmeth_gn.c',
     'crypto/evp/pmeth_lib.c',
     'crypto/evp/signature.c',
     'crypto/ffc/ffc_backend.c',
     'crypto/ffc/ffc_key_generate.c',
     'crypto/ffc/ffc_key_validate.c',
     'crypto/ffc/ffc_params.c',
     'crypto/ffc/ffc_params_generate.c',
     'crypto/ffc/ffc_params_validate.c',
     'crypto/hmac/hm_ameth.c',
     'crypto/hmac/hmac.c',
     'crypto/http/http_client.c',
     'crypto/http/http_err.c',
     'crypto/http/http_lib.c',
     'crypto/kdf/kdf_err.c',
     'crypto/lhash/lh_stats.c',
     'crypto/lhash/lhash.c',
     'crypto/asn1_dsa.c',
     'crypto/bsearch.c',
     'crypto/context.c',
     'crypto/core_algorithm.c',
     'crypto/core_fetch.c',
     'crypto/core_namemap.c',
     'crypto/cpt_err.c',
     'crypto/cryptlib.c',
     'crypto/ctype.c',
     'crypto/cversion.c',
     'crypto/der_writer.c',
     'crypto/ebcdic.c',
     'crypto/ex_data.c',
     'crypto/getenv.c',
     'crypto/info.c',
     'crypto/init.c',
     'crypto/initthread.c',
     'crypto/mem.c',
     'crypto/mem_clr.c',
     'crypto/mem_sec.c',
     'crypto/o_dir.c',
     'crypto/o_fopen.c',
     'crypto/o_init.c',
     'crypto/o_str.c',
     'crypto/o_time.c',
     'crypto/packet.c',
     'crypto/param_build.c',
     'crypto/param_build_set.c',
     'crypto/params.c',
     'crypto/params_from_text.c',
     'crypto/provider.c',
     'crypto/provider_conf.c',
     'crypto/provider_core.c',
     'crypto/provider_predefined.c',
     'crypto/self_test_core.c',
     'crypto/sparse_array.c',
     'crypto/threads_none.c',
     'crypto/threads_pthread.c',
     'crypto/threads_win.c',
     'crypto/trace.c',
     'crypto/uid.c',
     'crypto/md5/md5_dgst.c',
     'crypto/md5/md5_one.c',
     'crypto/md5/md5_sha1.c',
     'crypto/modes/cbc128.c',
     'crypto/modes/ccm128.c',
     'crypto/modes/cfb128.c',
     'crypto/modes/ctr128.c',
     'crypto/modes/cts128.c',
     'crypto/modes/gcm128.c',
     'crypto/modes/ocb128.c',
     'crypto/modes/ofb128.c',
     'crypto/modes/siv128.c',
     'crypto/modes/wrap128.c',
     'crypto/modes/xts128.c',
     'crypto/objects/o_names.c',
     'crypto/objects/obj_dat.c',
     'crypto/objects/obj_err.c',
     'crypto/objects/obj_lib.c',
     'crypto/objects/obj_xref.c',
     'crypto/ocsp/ocsp_asn.c',
     'crypto/ocsp/ocsp_cl.c',
     'crypto/ocsp/ocsp_err.c',
     'crypto/ocsp/ocsp_ext.c',
     'crypto/ocsp/ocsp_http.c',
     'crypto/ocsp/ocsp_lib.c',
     'crypto/ocsp/ocsp_prn.c',
     'crypto/ocsp/ocsp_srv.c',
     'crypto/ocsp/ocsp_vfy.c',
     'crypto/ocsp/v3_ocsp.c',
     'crypto/pem/pem_all.c',
     'crypto/pem/pem_err.c',
     'crypto/pem/pem_info.c',
     'crypto/pem/pem_lib.c',
     'crypto/pem/pem_oth.c',
     'crypto/pem/pem_pk8.c',
     'crypto/pem/pem_pkey.c',
     'crypto/pem/pem_sign.c',
     'crypto/pem/pem_x509.c',
     'crypto/pem/pem_xaux.c',
     'crypto/pem/pvkfmt.c',
     'crypto/pkcs12/p12_add.c',
     'crypto/pkcs12/p12_asn.c',
     'crypto/pkcs12/p12_attr.c',
     'crypto/pkcs12/p12_crpt.c',
     'crypto/pkcs12/p12_crt.c',
     'crypto/pkcs12/p12_decr.c',
     'crypto/pkcs12/p12_init.c',
     'crypto/pkcs12/p12_key.c',
     'crypto/pkcs12/p12_kiss.c',
     'crypto/pkcs12/p12_mutl.c',
     'crypto/pkcs12/p12_npas.c',
     'crypto/pkcs12/p12_p8d.c',
     'crypto/pkcs12/p12_p8e.c',
     'crypto/pkcs12/p12_sbag.c',
     'crypto/pkcs12/p12_utl.c',
     'crypto/pkcs12/pk12err.c',
     'crypto/pkcs7/bio_pk7.c',
     'crypto/pkcs7/pk7_asn1.c',
     'crypto/pkcs7/pk7_attr.c',
     'crypto/pkcs7/pk7_doit.c',
     'crypto/pkcs7/pk7_lib.c',
     'crypto/pkcs7/pk7_mime.c',
     'crypto/pkcs7/pk7_smime.c',
     'crypto/pkcs7/pkcs7err.c',
     'crypto/poly1305/poly1305.c',
     'crypto/poly1305/poly1305_ameth.c',
     'crypto/property/defn_cache.c',
     'crypto/property/property.c',
     'crypto/property/property_err.c',
     'crypto/property/property_parse.c',
     'crypto/property/property_string.c',
     'crypto/rand/drbg_lib.c',
     'crypto/rand/rand_deprecated.c',
     'crypto/rand/rand_err.c',
     'crypto/rand/rand_lib.c',
     'crypto/ripemd/rmd_dgst.c',
     'crypto/ripemd/rmd_one.c',
     'crypto/rsa/rsa_ameth.c',
     'crypto/rsa/rsa_asn1.c',
     'crypto/rsa/rsa_backend.c',
     'crypto/rsa/rsa_chk.c',
     'crypto/rsa/rsa_crpt.c',
     'crypto/rsa/rsa_err.c',
     'crypto/rsa/rsa_gen.c',
     'crypto/rsa/rsa_lib.c',
     'crypto/rsa/rsa_meth.c',
     'crypto/rsa/rsa_mp.c',
     'crypto/rsa/rsa_mp_names.c',
     'crypto/rsa/rsa_none.c',
     'crypto/rsa/rsa_oaep.c',
     'crypto/rsa/rsa_ossl.c',
     'crypto/rsa/rsa_pk1.c',
     'crypto/rsa/rsa_pmeth.c',
     'crypto/rsa/rsa_prn.c',
     'crypto/rsa/rsa_pss.c',
     'crypto/rsa/rsa_saos.c',
     'crypto/rsa/rsa_schemes.c',
     'crypto/rsa/rsa_sign.c',
     'crypto/rsa/rsa_sp800_56b_check.c',
     'crypto/rsa/rsa_sp800_56b_gen.c',
     'crypto/rsa/rsa_ssl.c',
     'crypto/rsa/rsa_x931.c',
     'crypto/rsa/rsa_x931g.c',
     'crypto/seed/seed.c',
     'crypto/seed/seed_cbc.c',
     'crypto/seed/seed_cfb.c',
     'crypto/seed/seed_ecb.c',
     'crypto/seed/seed_ofb.c',
     'crypto/serializer/serializer_err.c',
     'crypto/serializer/serializer_lib.c',
     'crypto/serializer/serializer_meth.c',
     'crypto/serializer/serializer_pkey.c',
     'crypto/sha/keccak1600.c',
     'crypto/sha/sha1_one.c',
     'crypto/sha/sha1dgst.c',
     'crypto/sha/sha256.c',
     'crypto/sha/sha3.c',
     'crypto/sha/sha512.c',
     'crypto/siphash/siphash.c',
     'crypto/siphash/siphash_ameth.c',
     'crypto/sm2/sm2_crypt.c',
     'crypto/sm2/sm2_err.c',
     'crypto/sm2/sm2_pmeth.c',
     'crypto/sm2/sm2_sign.c',
     'crypto/sm3/legacy_sm3.c',
     'crypto/sm3/sm3.c',
     'crypto/sm4/sm4.c',
     'crypto/srp/srp_lib.c',
     'crypto/srp/srp_vfy.c',
     'crypto/stack/stack.c',
     'crypto/store/store_err.c',
     'crypto/store/store_init.c',
     'crypto/store/store_lib.c',
     'crypto/store/store_register.c',
     'crypto/store/store_strings.c',
     'crypto/ts/ts_asn1.c',
     'crypto/ts/ts_conf.c',
     'crypto/ts/ts_err.c',
     'crypto/ts/ts_lib.c',
     'crypto/ts/ts_req_print.c',
     'crypto/ts/ts_req_utils.c',
     'crypto/ts/ts_rsp_print.c',
     'crypto/ts/ts_rsp_sign.c',
     'crypto/ts/ts_rsp_utils.c',
     'crypto/ts/ts_rsp_verify.c',
     'crypto/ts/ts_verify_ctx.c',
     'crypto/txt_db/txt_db.c',
     'crypto/ui/ui_err.c',
     'crypto/ui/ui_lib.c',
     'crypto/ui/ui_null.c',
     'crypto/ui/ui_openssl.c',
     'crypto/ui/ui_util.c',
     'crypto/whrlpool/wp_block.c',
     'crypto/whrlpool/wp_dgst.c',
     'crypto/x509/by_dir.c',
     'crypto/x509/by_store.c',
     'crypto/x509/pcy_cache.c',
     'crypto/x509/pcy_data.c',
     'crypto/x509/pcy_lib.c',
     'crypto/x509/pcy_map.c',
     'crypto/x509/pcy_node.c',
     'crypto/x509/pcy_tree.c',
     'crypto/x509/t_crl.c',
     'crypto/x509/t_req.c',
     'crypto/x509/t_x509.c',
     'crypto/x509/v3_addr.c',
     'crypto/x509/v3_admis.c',
     'crypto/x509/v3_akey.c',
     'crypto/x509/v3_akeya.c',
     'crypto/x509/v3_alt.c',
     'crypto/x509/v3_asid.c',
     'crypto/x509/v3_bcons.c',
     'crypto/x509/v3_bitst.c',
     'crypto/x509/v3_conf.c',
     'crypto/x509/v3_cpols.c',
     'crypto/x509/v3_crld.c',
     'crypto/x509/v3_enum.c',
     'crypto/x509/v3_extku.c',
     'crypto/x509/v3_genn.c',
     'crypto/x509/v3_ia5.c',
     'crypto/x509/v3_info.c',
     'crypto/x509/v3_int.c',
     'crypto/x509/v3_ist.c',
     'crypto/x509/v3_lib.c',
     'crypto/x509/v3_ncons.c',
     'crypto/x509/v3_pci.c',
     'crypto/x509/v3_pcia.c',
     'crypto/x509/v3_pcons.c',
     'crypto/x509/v3_pku.c',
     'crypto/x509/v3_pmaps.c',
     'crypto/x509/v3_prn.c',
     'crypto/x509/v3_purp.c',
     'crypto/x509/v3_skey.c',
     'crypto/x509/v3_sxnet.c',
     'crypto/x509/v3_tlsf.c',
     'crypto/x509/v3_utf8.c',
     'crypto/x509/v3_utl.c',
     'crypto/x509/v3err.c',
     'crypto/x509/x509_att.c',
     'crypto/x509/x509_cmp.c',
     'crypto/x509/x509_d2.c',
     'crypto/x509/x509_def.c',
     'crypto/x509/x509_err.c',
     'crypto/x509/x509_ext.c',
     'crypto/x509/x509_lu.c',
     'crypto/x509/x509_meth.c',
     'crypto/x509/x509_obj.c',
     'crypto/x509/x509_r2x.c',
     'crypto/x509/x509_req.c',
     'crypto/x509/x509_set.c',
     'crypto/x509/x509_trs.c',
     'crypto/x509/x509_txt.c',
     'crypto/x509/x509_v3.c',
     'crypto/x509/x509_vfy.c',
     'crypto/x509/x509_vpm.c',
     'crypto/x509/x509cset.c',
     'crypto/x509/x509name.c',
     'crypto/x509/x509rset.c',
     'crypto/x509/x509spki.c',
     'crypto/x509/x509type.c',
     'crypto/x509/x_all.c',
     'crypto/x509/x_attrib.c',
     'crypto/x509/x_crl.c',
     'crypto/x509/x_exten.c',
     'crypto/x509/x_name.c',
     'crypto/x509/x_pubkey.c',
     'crypto/x509/x_req.c',
     'crypto/x509/x_x509.c',
     'crypto/x509/x_x509a.c',
     'providers/defltprov.c',
     'providers/legacyprov.c',
     'providers/nullprov.c',
     'providers/implementations/asymciphers/rsa_enc.c',
     'providers/implementations/ciphers/cipher_aes.c',
     'providers/implementations/ciphers/cipher_aes_cbc_hmac_sha.c',
     'providers/implementations/ciphers/cipher_aes_cbc_hmac_sha1_hw.c',
     'providers/implementations/ciphers/cipher_aes_cbc_hmac_sha256_hw.c',
     'providers/implementations/ciphers/cipher_aes_ccm.c',
     'providers/implementations/ciphers/cipher_aes_ccm_hw.c',
     'providers/implementations/ciphers/cipher_aes_gcm.c',
     'providers/implementations/ciphers/cipher_aes_gcm_hw.c',
     'providers/implementations/ciphers/cipher_aes_hw.c',
     'providers/implementations/ciphers/cipher_aes_ocb.c',
     'providers/implementations/ciphers/cipher_aes_ocb_hw.c',
     'providers/implementations/ciphers/cipher_aes_siv.c',
     'providers/implementations/ciphers/cipher_aes_siv_hw.c',
     'providers/implementations/ciphers/cipher_aes_wrp.c',
     'providers/implementations/ciphers/cipher_aes_xts.c',
     'providers/implementations/ciphers/cipher_aes_xts_hw.c',
     'providers/implementations/ciphers/cipher_aria.c',
     'providers/implementations/ciphers/cipher_aria_ccm.c',
     'providers/implementations/ciphers/cipher_aria_ccm_hw.c',
     'providers/implementations/ciphers/cipher_aria_gcm.c',
     'providers/implementations/ciphers/cipher_aria_gcm_hw.c',
     'providers/implementations/ciphers/cipher_aria_hw.c',
     'providers/implementations/ciphers/cipher_chacha20.c',
     'providers/implementations/ciphers/cipher_chacha20_hw.c',
     'providers/implementations/ciphers/cipher_chacha20_poly1305.c',
     'providers/implementations/ciphers/cipher_chacha20_poly1305_hw.c',
     'providers/implementations/ciphers/cipher_null.c',
     'providers/implementations/ciphers/cipher_sm4.c',
     'providers/implementations/ciphers/cipher_sm4_hw.c',
     'providers/implementations/digests/blake2_prov.c',
     'providers/implementations/digests/blake2b_prov.c',
     'providers/implementations/digests/blake2s_prov.c',
     'providers/implementations/digests/md5_prov.c',
     'providers/implementations/digests/md5_sha1_prov.c',
     'providers/implementations/digests/sha2_prov.c',
     'providers/implementations/digests/sha3_prov.c',
     'providers/implementations/digests/sm3_prov.c',
     'providers/implementations/exchange/dh_exch.c',
     'providers/implementations/exchange/ecx_exch.c',
     'providers/implementations/kdfs/hkdf.c',
     'providers/implementations/kdfs/kbkdf.c',
     'providers/implementations/kdfs/krb5kdf.c',
     'providers/implementations/kdfs/pbkdf2.c',
     'providers/implementations/kdfs/scrypt.c',
     'providers/implementations/kdfs/sshkdf.c',
     'providers/implementations/kdfs/sskdf.c',
     'providers/implementations/kdfs/tls1_prf.c',
     'providers/implementations/kdfs/x942kdf.c',
     'providers/implementations/keymgmt/dh_kmgmt.c',
     'providers/implementations/keymgmt/ec_kmgmt.c',
     'providers/implementations/keymgmt/ecx_kmgmt.c',
     'providers/implementations/macs/blake2b_mac.c',
     'providers/implementations/macs/blake2s_mac.c',
     'providers/implementations/macs/cmac_prov.c',
     'providers/implementations/macs/gmac_prov.c',
     'providers/implementations/macs/hmac_prov.c',
     'providers/implementations/macs/kmac_prov.c',
     'providers/implementations/macs/poly1305_prov.c',
     'providers/implementations/macs/siphash_prov.c',
     'providers/implementations/serializers/serializer_common.c',
     'providers/implementations/serializers/serializer_dh.c',
     'providers/implementations/serializers/serializer_dh_param.c',
     'providers/implementations/serializers/serializer_dh_priv.c',
     'providers/implementations/serializers/serializer_dh_pub.c',
     'providers/implementations/serializers/serializer_ec.c',
     'providers/implementations/serializers/serializer_ec_param.c',
     'providers/implementations/serializers/serializer_ec_priv.c',
     'providers/implementations/serializers/serializer_ec_pub.c',
     'providers/implementations/serializers/serializer_ecx.c',
     'providers/implementations/serializers/serializer_ecx_priv.c',
     'providers/implementations/serializers/serializer_ecx_pub.c',
     'providers/implementations/serializers/serializer_ffc_params.c',
     'providers/implementations/serializers/serializer_rsa.c',


     'providers/implementations/serializers/serializer_rsa_priv.c',
     'providers/implementations/serializers/serializer_rsa_pub.c',
     'providers/implementations/signature/eddsa.c',
     'providers/implementations/ciphers/cipher_blowfish.c',
     'providers/implementations/ciphers/cipher_blowfish_hw.c',
     'providers/implementations/ciphers/cipher_seed.c',
     'providers/implementations/ciphers/cipher_seed_hw.c',
     'providers/implementations/digests/ripemd_prov.c',
     'providers/implementations/digests/wp_prov.c',
     'providers/common/bio_prov.c',
     'providers/common/provider_ctx.c',
     'providers/common/provider_err.c',
     'providers/implementations/ciphers/ciphercommon.c',
     'providers/implementations/ciphers/ciphercommon_block.c',
     'providers/implementations/ciphers/ciphercommon_ccm.c',
     'providers/implementations/ciphers/ciphercommon_ccm_hw.c',
     'providers/implementations/ciphers/ciphercommon_gcm.c',
     'providers/implementations/ciphers/ciphercommon_gcm_hw.c',
     'providers/implementations/ciphers/ciphercommon_hw.c',
     'providers/implementations/digests/digestcommon.c',
     'providers/common/der/der_digests_gen.c',

     'providers/common/der/der_dsa_gen.c',

     'providers/common/der/der_dsa_key.c',
     'providers/common/der/der_dsa_sig.c',
     'providers/common/der/der_ec_gen.c',

     'providers/common/der/der_ec_key.c',
     'providers/common/der/der_ec_sig.c',
     'providers/common/der/der_rsa_gen.c',

     'providers/common/der/der_rsa_key.c',
     'providers/common/der/der_rsa_sig.c',
     'providers/common/capabilities.c',
     'providers/common/nid_to_name.c',
     'providers/common/provider_util.c',
     'providers/implementations/ciphers/cipher_aes_xts_fips.c',
     'providers/implementations/exchange/ecdh_exch.c',
     'providers/implementations/kdfs/pbkdf2_fips.c',
     'providers/implementations/keymgmt/rsa_kmgmt.c',
     'providers/implementations/rands/crngt.c',
     'providers/implementations/rands/drbg.c',
     'providers/implementations/rands/drbg_ctr.c',
     'providers/implementations/rands/drbg_hash.c',
     'providers/implementations/rands/drbg_hmac.c',
     'providers/implementations/rands/rand_pool.c',
     'providers/implementations/rands/test_rng.c',
     'providers/implementations/rands/seeding/rand_cpu_x86.c',
     'providers/implementations/rands/seeding/rand_tsc.c',
     'providers/implementations/rands/seeding/rand_unix.c',
     'providers/implementations/rands/seeding/rand_win.c',
     'providers/implementations/signature/ecdsa.c',
     'providers/implementations/signature/rsa.c',
]

OPENSSL_CONFIGURE_PARAMS = [
	'no-asm','no-threads','no-autoload-config','no-camellia','no-capieng',
	'no-cast','no-comp','no-deprecated','no-des','no-dsa','no-dso',
	'no-dtls','no-engine','no-gost','no-idea',
	'no-md2','no-md4','no-mdc2','no-mdc2','no-psk','no-rc2','no-rc4','no-rc5','no-rc5',
    ]

openssl_c_args = [
  '-DOPENSSL_NO_SECURE_MEMORY',
  '-DSTATIC_LEGACY',
'-DOPENSSL_USE_NODELETE','-DL_ENDIAN','-DOPENSSL_PIC',
'-DOPENSSLDIR="' + meson.current_build_dir() / 'openssl/ssl' +'"',
'-DENGINESDIR="' + meson.current_build_dir() / 'openssl/lib/engines-3' + '"',
'-DMODULESDIR="' + meson.current_build_dir() / 'openssl/lib/ossl-modules' + '"',
]

if meson.is_cross_build()
  openssl_c_args += meson.get_external_property('c_args')
endif

ARCH = host_machine.cpu_family()

cc = meson.get_compiler('c')
env = environment()

env.set('CC', meson.get_external_property('c'))
env.set('AR', meson.get_external_property('ar'))
if not meson.is_cross_build()
  env.set('CFLAGS', openssl_c_args)
else
  env.set('CFLAGS', [openssl_c_args, meson.get_external_property('cpp_args')])
endif

makefile = run_command(
    find_program('./Configure'),
    'linux-' + ARCH,
    OPENSSL_CONFIGURE_PARAMS,
    '--prefix=' + join_paths(meson.current_build_dir(), 'openssl/'),
    env: env,
)

# Clean source directories
make_exe = find_program('make')
clean = run_command(
    make_exe,
    '-C', meson.current_source_dir(),
    '-s',
    'clean',
)
  
# Generate header files
# TODO(antony): use meson generator() instead
generated_files = []
foreach file : libcrypto_sources
  if file.contains('_gen')
    generated_files += file
  endif
endforeach

depend = run_command(
    make_exe,
    '-C', meson.current_source_dir(),
    'build_generated',
    generated_files,
    '-s',
)

libcrypto_inc = include_directories('include/')

private_include_dir = [
    libcrypto_inc,
    '.',
    'providers/common/include',
    'providers/implementations/include',
    'crypto/include',
  ]

foreach file : libcrypto_sources
  private_include_dir += dir(file)
endforeach


libcrypto_lib = static_library('crypto',
  sources: [
    libcrypto_sources,
  ],
  c_args: openssl_c_args,
  include_directories: ,
  pic: true
)

libcrypto_dep = declare_dependency(
  link_with: libcrypto_lib,
  include_directories: [
    libcrypto_inc,
  ],
)
