./ec_dep = declare_dependency(
include_directories: '.'
sources: [
'curve25519.c',
'ec2_oct.c',
'ec2_smpl.c',
'ec_ameth.c',
'ec_asn1.c',
'ec_backend.c',
'ec_check.c',
'ec_ctrl.c',
'ec_curve.c',
'ec_cvt.c',
'ecdh_kdf.c',
'ecdh_ossl.c',
'ecdsa_ossl.c',
'ecdsa_sign.c',
'ecdsa_vrf.c',
'ec_err.c',
'ec_key.c',
'ec_kmeth.c',
'eck_prn.c',
'ec_lib.c',
'ec_mult.c',
'ec_oct.c',
'ec_pmeth.c',
'ecp_mont.c',
'ecp_nist.c',
'ecp_nistp224.c',
'ecp_nistp256.c',
'ecp_nistp521.c',
'ecp_nistputil.c',
'ecp_nistz256.c',
'ecp_nistz256_table.c',
'ecp_oct.c',
'ec_print.c',
'ecp_s390x_nistp.c',
'ecp_smpl.c',
'ecx_backend.c',
'ecx_key.c',
'ecx_meth.c',
'ecx_s390x.c',
])
